# e2epaste

./: .gitignore  Cargo.toml  README.md  Rocket.toml
src/: main.rs  paste_db.rs  paste_id.rs
static/: site.webmanifest
static/css/: styles.css
static/js/: password-page.js  string-tools.js
static/pkg/: 0.bootstrap_wasm.js  bootstrap_wasm.js
templates/: bot_filter.html.j2  faq.html.j2  footer.html.j2  index.html.j2  layout.html.j2  nav.html.j2  password_gen.html.j2  paste.html.j2  paste_not_found.html.j2  string_tools.html.j2
